<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">无线控制服务端</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint">提示</string>       
    <string name="bind">设置</string>       
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="start_position">手指按下位置：</string> 
    <string name="move_distance">手指移动距离：</string>
    <string name="end_position">手指离开位置：</string> 
    <string name="title_setting_ip">请设置服务器IP:</string>

    <string name="error_ip">IP地址错误，请设置服务器IP!</string>   
    <string name="success_setting_ip">设置服务器IP地址成功，服务器IP:</string>   
    <string name="bluetooth_disable">蓝牙未打开</string>   
</resources>