<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal" >

    <com.external.cameraService.customview.scrollButton
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
     <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp">
            <Button
                android:id="@+id/hint" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                android:background="@drawable/direct_btn_selector"
                android:layout_marginRight="20dp"/>
            <Button
                android:id="@+id/bind" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bind"
                android:background="@drawable/direct_btn_selector"/>
        </LinearLayout>
        <!--<Button
            android:id="@+id/hint" 
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/hint"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="5dp"
            android:textSize="20dp"
            android:background="@drawable/direct_btn_selector"/>"  -->
        <View 
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/show_info" 
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:background="#ff0000"/>
        <View android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp">
            <Button
                android:id="@+id/ok" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:background="@drawable/direct_btn_selector"
                android:layout_marginRight="20dp"/>
            <Button
                android:id="@+id/cancel" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/direct_btn_selector"/>
        </LinearLayout>
     </LinearLayout>
     <RelativeLayout 
         android:layout_width="0dp"
         android:layout_height="180dp"
         android:layout_weight="1"
         android:layout_gravity="center_vertical">
	      <TextView
	          android:id="@+id/up"
	          android:layout_width="60dp"
	          android:layout_height="wrap_content"
	          android:layout_centerHorizontal="true"
	          android:layout_alignParentTop="true"
	          android:text="@string/up"
	          android:gravity="center"          
	          android:background="@drawable/direct_btn_selector"/>  
	      <TextView
	          android:id="@+id/down" 
	          android:layout_width="60dp"
	          android:layout_height="wrap_content"
	          android:layout_centerHorizontal="true"
	          android:layout_alignParentBottom="true"
	          android:text="@string/down"
	          android:gravity="center"          
	          android:background="@drawable/direct_btn_selector"/>   
	      <TextView
	          android:id="@+id/left" 
	          android:layout_width="60dp"
	          android:layout_height="wrap_content"
	          android:layout_centerVertical="true"
	          android:layout_alignParentLeft="true"
	          android:text="@string/left"
	          android:gravity="center"
	          android:background="@drawable/direct_btn_selector"/> 
	      <TextView
	          android:id="@+id/right" 
	          android:layout_width="60dp"
	          android:layout_height="wrap_content"
	          android:layout_centerVertical="true"
	          android:layout_alignParentRight="true"
	          android:text="@string/right"
	          android:gravity="center"         
	          android:background="@drawable/direct_btn_selector"/>                                   
     </RelativeLayout>        
</LinearLayout>