<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">   
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_setting_ip"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:digits="1234567890."
        android:hint="@string/title_setting_ip"
        android:focusable="true"
        android:background="@drawable/background_password"
        android:layout_marginBottom="20dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp">
        <Button
            android:id="@+id/ok" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@drawable/direct_btn_selector"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/cancel" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/direct_btn_selector"/>
    </LinearLayout>
</LinearLayout>